# Voxel

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
engine/: CMakeLists.txt  entry_point.cpp  entry_point.hpp
engine/core/: CMakeLists.txt
engine/core/include/core/: application.hpp  log.hpp  window.hpp
engine/core/src/: application.cpp  log.cpp  window.cpp
engine/renderer/: CMakeLists.txt
engine/renderer/include/renderer/: vulkan_context.hpp
engine/renderer/src/: vulkan_context.cpp
src/: CMakeLists.txt
